my second work- green heading

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>HTML is structure only</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a geat course!</h1>
+<h1> style="color: green; font-size: 60px; text-align: center;">HTML is structure only</h1>
+<p style="margin: 0 100px 0 100px; font-size: 1.5em;">es que lo que pasa es que lo que pasa es que lo que pasa es que lo que pasa es que lo que pasa es que, pues lo que pasa es que, pus sí, no, sí</p>
+<p> es que lo que pasa es que lo que sí es que pues sí, no es que pus sí wey</p>
+<footer>
+<hr>
+<p style="text-align: center;"
+onclick="alert('EMAILING US IS USELESS , YOU FUCKER');">
+Tech Support: douchebag@server-is-down-com
+</p>
+</footer>
 </body>
 </html>
