--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>HTML is structure only</title>
 </head>
 <body>
-<h1> style="color: green; font-size: 60px; text-align: center;">HTML is structure only</h1>
+<h1 style="color: green; font-size: 60px; text-align: center;">HTML is structure only</h1>
 <p style="margin: 0 100px 0 100px; font-size: 1.5em;">es que lo que pasa es que lo que pasa es que lo que pasa es que lo que pasa es que lo que pasa es que, pues lo que pasa es que, pus sí, no, sí</p>
 <p> es que lo que pasa es que lo que sí es que pues sí, no es que pus sí wey</p>
 <footer>
